tests/machine/x/kotlin/group_by_sort.error
line 69:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:69:24: error: expecting property name or receiver type
        __res.add(x.val)
                       ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:69:25: error: expecting ')'
        __res.add(x.val)
                        ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:78:24: error: expecting property name or receiver type
        __res.add(x.val)
                       ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:78:25: error: expecting ')'
        __res.add(x.val)
                        ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:66:41: error: unresolved reference: g
        __res.add(mutableMapOf("cat" to g.key, "total" to sum(run {
                                        ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:66:63: error: type inference failed. Expected type mismatch: inferred type is MutableList<Any> but List<Int> was expected
        __res.add(mutableMapOf("cat" to g.key, "total" to sum(run {
                                                              ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:68:15: error: unresolved reference: g
    for (x in g) {
              ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:75:28: error: type inference failed. Expected type mismatch: inferred type is MutableList<Any> but List<Int> was expected
}.sortedByDescending { sum(run {
                           ^
/workspace/mochi/tests/machine/x/kotlin/group_by_sort.kt:77:15: error: unresolved reference: g
    for (x in g) {
              ^

 68:     for (x in g) {
 69:         __res.add(x.val)
 70:     }
